--- a/MMarket/MyMaster.Master
+++ b/MMarket/MyMaster.Master
@@ -10,7 +10,7 @@
     <script src="Scripts/jquery-3.2.1.slim.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
     <link href="Content/bootstrap-theme.css" rel="stylesheet" />
-    <link href="Content/bootstrap.css" rel="stylesheet" />
+    <%--<link href="Content/bootstrap.css" rel="stylesheet" />--%>
     <link href="css/MasterStyle.css" rel="stylesheet" /> 
     <link href="css/LoginStyle.css" rel="stylesheet" />
     <link href="css/BadgeStyle.css" rel="stylesheet" />
@@ -162,226 +162,7 @@
 						</div>
 						
 				</section>
-		</div> <div id="modal" class="popupContainer" style="display:none">
-				<header class="popupHeader">
-						<span class="header_title">Login</span>
-						<span class="modal_close"><i class="fa fa-times"></i></span>
-				</header>
-
-				<section class="popupBody">
-						<!-- Social Login -->
-						<div class="social_login">
-
-								<div class="action_btns">
-										<div class="one_half"><a href="#" id="login_form" class="btn" style="background-color: #944d4d; border-color:#944d4d;">Login</a></div>
-										<div class="one_half last"><a href="#" id="register_form" class="btn" style="background-color: #944d4d; border-color:#944d4d";>Sign up</a></div>
-								</div>
-						</div>
-
-                        <!-- Username & Password Login form -->
-						<div class="user_login">
-										<label>Email / Username</label>
-										<input type="text" id="Text1" runat="server"/>
-										<br />
-
-										<label>Password</label>
-										<input type="password" id="Password3" runat="server" />
-										<br />
-
-                            <asp:Label ID="Label1" runat="server" Visible="False" ForeColor="#FF3300"></asp:Label>
-                            <br />
-
-										<div class="checkbox">
-												<input id="remember" type="checkbox" />
-												<label for="remember">Remember me</label>
-										</div>
-
-										<div class="action_btns">
-                                            <div class="one_half"><a href="#" class="btn back_btn" style="background-color: #944d4d; border-color:#944d4d;"><i class="fa fa-angle-double-left"></i> Back</a></div>
-                                            <div class="one_half last"><a class="btn btn_red" style="background-color: #944d4d; border-color:#944d4d;"><asp:Button ID="Button1" runat="server" style="cursor:pointer; margin-top: 0px; text-align:center;" Text="Login" BorderStyle="None" BackColor="Transparent"  Height="100%" Width="100%" CausesValidation="False" OnClick="btnLogin_Click" /></a></div>
-										</div>
-
-								<a href="#" class="forgot_password">Forgot password?</a>
-						</div>
-						
-                        <!-- Register Form -->
-						<div class="user_register">
-										<input type="text" id="Text2" runat="server" placeholder="Username" />
-                            <table>
-                                <tr>
-                                    <td>
-                                        <asp:RegularExpressionValidator ID="RegularExpressionValidator1" runat="server" ErrorMessage="Invalid Username" ForeColor="#FF3300" ControlToValidate="Username2" ValidationExpression="[a-zA-Z0-9_\-]{6,30}"></asp:RegularExpressionValidator>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <asp:RequiredFieldValidator ID="RequiredFieldValidator1" runat="server" ErrorMessage="Username field is required" ForeColor="#FF3300" ControlToValidate="Username2"></asp:RequiredFieldValidator>
-                                    </td>
-                                </tr>
-                            </table>
-
-										<input type="text" id="Text3" runat="server" placeholder="Email Address" />
-                            <table>
-                                <tr>
-                                    <td>
-                                        <asp:RegularExpressionValidator ID="RegularExpressionValidator2" runat="server" ErrorMessage="Invalid Email" ForeColor="#FF3300" ControlToValidate="Email" ValidationExpression="\w+([-+.']\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*"></asp:RegularExpressionValidator>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <asp:RequiredFieldValidator ID="RequiredFieldValidator2" runat="server" ErrorMessage="Email field is required" ForeColor="#FF3300" ControlToValidate="Email"></asp:RequiredFieldValidator>
-                                    </td>
-                                </tr>
-                            </table>
-                            
-										<input type="password" id="Password4" runat="server" placeholder="Password" />
-                            <table>
-                                <tr>
-                                    <td>
-                                        <asp:RegularExpressionValidator ID="RegularExpressionValidator3" runat="server" ErrorMessage="Invalid password" ForeColor="#FF3300" ControlToValidate="Password1" ValidationExpression="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d).{8,16}$"></asp:RegularExpressionValidator>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <asp:RequiredFieldValidator ID="RequiredFieldValidator3" runat="server" ErrorMessage="Password field is required" ForeColor="#FF3300" ControlToValidate="Password1"></asp:RequiredFieldValidator>
-                                    </td>
-                                </tr>
-                            </table>
-
-										<input type="password" id="Password5" runat="server" placeholder="Confirm Password" />
-                            <table>
-                                <tr>
-                                    <td>
-                                        <asp:CompareValidator ID="CompareValidator1" runat="server" ErrorMessage="Entered passwords don't match" ForeColor="#FF3300" ControlToCompare="Password1" ControlToValidate="Password2"></asp:CompareValidator>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <asp:RequiredFieldValidator ID="RequiredFieldValidator4" runat="server" ErrorMessage="Password confirmation field is required" ForeColor="#FF3300" ControlToValidate="Password2"></asp:RequiredFieldValidator>
-                                    </td>
-                                </tr>
-                            </table>
-                            <asp:Label ID="Label2" runat="server" Visible="False" ForeColor="#FF3300"></asp:Label>
-
-										
-										<div class="action_btns">
-                                            <div class="one_half"><a href="#" class="btn back_btn"><i class="fa fa-angle-double-left"></i> Back</a></div>
-                                            <div class="one_half last"><a class="btn btn_red"><asp:Button ID="Button2" runat="server" style="cursor:pointer" Text="Register" BorderStyle="None" BackColor="Transparent" Height="100%" Width="100%" OnClick="btnRegister_Click" CausesValidation="False" /></a></div>
-										</div>
-						</div>
-						
-				</section>
-		</div> <div id="modal" class="popupContainer" style="display:none">
-				<header class="popupHeader">
-						<span class="header_title">Login</span>
-						<span class="modal_close"><i class="fa fa-times"></i></span>
-				</header>
-
-				<section class="popupBody">
-						<!-- Social Login -->
-						<div class="social_login">
-
-								<div class="action_btns">
-										<div class="one_half"><a href="#" id="login_form" class="btn" style="background-color: #944d4d; border-color:#944d4d;">Login</a></div>
-										<div class="one_half last"><a href="#" id="register_form" class="btn" style="background-color: #944d4d; border-color:#944d4d";>Sign up</a></div>
-								</div>
-						</div>
-
-                        <!-- Username & Password Login form -->
-						<div class="user_login">
-										<label>Email / Username</label>
-										<input type="text" id="Text4" runat="server"/>
-										<br />
-
-										<label>Password</label>
-										<input type="password" id="Password6" runat="server" />
-										<br />
-
-                            <asp:Label ID="Label3" runat="server" Visible="False" ForeColor="#FF3300"></asp:Label>
-                            <br />
-
-										<div class="checkbox">
-												<input id="remember" type="checkbox" />
-												<label for="remember">Remember me</label>
-										</div>
-
-										<div class="action_btns">
-                                            <div class="one_half"><a href="#" class="btn back_btn" style="background-color: #944d4d; border-color:#944d4d;"><i class="fa fa-angle-double-left"></i> Back</a></div>
-                                            <div class="one_half last"><a class="btn btn_red" style="background-color: #944d4d; border-color:#944d4d;"><asp:Button ID="Button3" runat="server" style="cursor:pointer; margin-top: 0px; text-align:center;" Text="Login" BorderStyle="None" BackColor="Transparent"  Height="100%" Width="100%" CausesValidation="False" OnClick="btnLogin_Click" /></a></div>
-										</div>
-
-								<a href="#" class="forgot_password">Forgot password?</a>
-						</div>
-						
-                        <!-- Register Form -->
-						<div class="user_register">
-										<input type="text" id="Text5" runat="server" placeholder="Username" />
-                            <table>
-                                <tr>
-                                    <td>
-                                        <asp:RegularExpressionValidator ID="RegularExpressionValidator4" runat="server" ErrorMessage="Invalid Username" ForeColor="#FF3300" ControlToValidate="Username2" ValidationExpression="[a-zA-Z0-9_\-]{6,30}"></asp:RegularExpressionValidator>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <asp:RequiredFieldValidator ID="RequiredFieldValidator5" runat="server" ErrorMessage="Username field is required" ForeColor="#FF3300" ControlToValidate="Username2"></asp:RequiredFieldValidator>
-                                    </td>
-                                </tr>
-                            </table>
-
-										<input type="text" id="Text6" runat="server" placeholder="Email Address" />
-                            <table>
-                                <tr>
-                                    <td>
-                                        <asp:RegularExpressionValidator ID="RegularExpressionValidator5" runat="server" ErrorMessage="Invalid Email" ForeColor="#FF3300" ControlToValidate="Email" ValidationExpression="\w+([-+.']\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*"></asp:RegularExpressionValidator>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <asp:RequiredFieldValidator ID="RequiredFieldValidator6" runat="server" ErrorMessage="Email field is required" ForeColor="#FF3300" ControlToValidate="Email"></asp:RequiredFieldValidator>
-                                    </td>
-                                </tr>
-                            </table>
-                            
-										<input type="password" id="Password7" runat="server" placeholder="Password" />
-                            <table>
-                                <tr>
-                                    <td>
-                                        <asp:RegularExpressionValidator ID="RegularExpressionValidator6" runat="server" ErrorMessage="Invalid password" ForeColor="#FF3300" ControlToValidate="Password1" ValidationExpression="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d).{8,16}$"></asp:RegularExpressionValidator>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <asp:RequiredFieldValidator ID="RequiredFieldValidator7" runat="server" ErrorMessage="Password field is required" ForeColor="#FF3300" ControlToValidate="Password1"></asp:RequiredFieldValidator>
-                                    </td>
-                                </tr>
-                            </table>
-
-										<input type="password" id="Password8" runat="server" placeholder="Confirm Password" />
-                            <table>
-                                <tr>
-                                    <td>
-                                        <asp:CompareValidator ID="CompareValidator2" runat="server" ErrorMessage="Entered passwords don't match" ForeColor="#FF3300" ControlToCompare="Password1" ControlToValidate="Password2"></asp:CompareValidator>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <asp:RequiredFieldValidator ID="RequiredFieldValidator8" runat="server" ErrorMessage="Password confirmation field is required" ForeColor="#FF3300" ControlToValidate="Password2"></asp:RequiredFieldValidator>
-                                    </td>
-                                </tr>
-                            </table>
-                            <asp:Label ID="Label4" runat="server" Visible="False" ForeColor="#FF3300"></asp:Label>
-
-										
-										<div class="action_btns">
-                                            <div class="one_half"><a href="#" class="btn back_btn"><i class="fa fa-angle-double-left"></i> Back</a></div>
-                                            <div class="one_half last"><a class="btn btn_red"><asp:Button ID="Button4" runat="server" style="cursor:pointer" Text="Register" BorderStyle="None" BackColor="Transparent" Height="100%" Width="100%" OnClick="btnRegister_Click" CausesValidation="False" /></a></div>
-										</div>
-						</div>
-						
-				</section>
 		</div>
-	
         <script src="js/modal.js"></script>
     
     
