--- a/MMarket/css/LoginStyle.css
+++ b/MMarket/css/LoginStyle.css
@@ -1,4 +1,5 @@
-﻿body {
+﻿
+body {
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 14px;
 }
@@ -95,7 +96,7 @@ a.btn_red {
 }
 
 .popupHeader {
-    background-color: #A20500;
+    background-color: #764069;
     position: relative;
     padding: 10px 20px;
     border-bottom: 1px solid;
@@ -107,9 +108,9 @@ a.btn_red {
         right: 0;
         top: 0;
         padding: 10px 15px;
-        background-color: #530300;
+        background-color: #FFCF40;
         cursor: pointer;
-        color: white;
+        color: #764069;
         font-size: 16px;
     }
 
