--- a/MMarket/css/BadgeStyle.css
+++ b/MMarket/css/BadgeStyle.css
@@ -8,8 +8,8 @@
         top: -10px;
         right: -10px;
         font-size: .7em;
-        background: green;
-        color: white;
+        background: #764069;
+        color: #F1C13C;
         width: 18px;
         height: 18px;
         text-align: center;
