malo promjena boje

--- a/MMarket/css/Payment.css
+++ b/MMarket/css/Payment.css
@@ -43,7 +43,7 @@
     }
 
 .step_complete {
-    background: #357ebd
+    background: #764069
 }
 
     .step_complete a.check-bc, .step_complete a.check-bc:hover, .afix-1, .afix-1:hover {
@@ -52,12 +52,12 @@
 
 .step_line.step_complete {
     background: 0;
-    border-left: 16px solid #357ebd
+    border-left: 16px solid #F1C13C
 }
 
 .step_thankyou {
     float: left;
-    background: white;
+    background: #764069;
     padding: 7px 13px;
     border-radius: 1px;
     text-align: center;
@@ -272,7 +272,7 @@ ol, ul {
 }
 
 .panel-info > .panel-heading {
-    background-image: linear-gradient(to bottom, #555 0px, #888 100%);
+    background-image: linear-gradient(to bottom, #F1C13C 0px, #764069 100%);
 }
 
 hr {
@@ -336,6 +336,74 @@ hr {
         width: 100%;
     }
 }
+
+.commerce .return-to-shop {
+    text-align: center;
+}
+
+    .commerce .return-to-shop .button {
+        display: inline-block;
+        margin-bottom: 0;
+        font-weight: 400;
+        text-align: center;
+        vertical-align: middle;
+        cursor: pointer;
+        background-image: none;
+        border: 1px solid transparent;
+        white-space: nowrap;
+        padding: 0.6rem 1.7rem;
+        font-size: 13px;
+        line-height: 1.3;
+        -webkit-transition: background-color 0.3s, border-color 0.3s, text-color 0.3s, box-shadow 0.3s;
+        -o-transition: background-color 0.3s, border-color 0.3s, text-color 0.3s, box-shadow 0.3s;
+        transition: background-color 0.3s, border-color 0.3s, text-color 0.3s, box-shadow 0.3s;
+        -webkit-border-radius: 0px;
+        border-radius: 0px;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        background-color: #ebebec;
+        border-color: #ebebec;
+        background: transparent;
+        border: 2px solid #ffbf00;
+        text-transform: uppercase;
+        color: #ffbf00;
+        position: relative;
+    }
+
+        .commerce .return-to-shop .button:hover,
+        .commerce .return-to-shop .button:focus {
+            color: #ffbf00;
+            text-decoration: none;
+        }
+
+        .commerce .return-to-shop .button i,
+        .commerce .return-to-shop .button span {
+            z-index: 2;
+            position: relative;
+        }
+
+        .commerce .return-to-shop .button:hover,
+        .commerce .return-to-shop .button:focus,
+        .commerce .return-to-shop .button:active,
+        .commerce .return-to-shop .button.active {
+            color: #ffbf00;
+            border-color: #d1d1d3;
+            -webkit-box-shadow: 0 0 0 2px #d1d1d3 inset;
+            box-shadow: 0 0 0 2px #d1d1d3 inset;
+        }
+
+        .commerce .return-to-shop .button:active,
+        .commerce .return-to-shop .button.active {
+            background-image: none;
+        }
+
+        .commerce .return-to-shop .button:hover {
+            border-color: #1e1e1e;
+            -webkit-box-shadow: 0 0 0 1px inset;
+            box-shadow: 0 0 0 1px inset;
+        }
 /*
 @media only screen and (max-width: 777px){
     .container{
