--- a/MMarket/css/Payment.css
+++ b/MMarket/css/Payment.css
@@ -404,6 +404,13 @@ hr {
             -webkit-box-shadow: 0 0 0 1px inset;
             box-shadow: 0 0 0 1px inset;
         }
+
+.commerce .cart-empty {
+    font-size: 2em;
+    font-weight: 700;
+    color: #1e1e1e;
+    text-align: center;
+}
 /*
 @media only screen and (max-width: 777px){
     .container{
