--- a/MMarket/css/LoginStyle.css
+++ b/MMarket/css/LoginStyle.css
@@ -231,7 +231,7 @@ a.btn_red {
     clear: both;
     overflow: hidden;
     text-decoration: none;
-    color: darkred;
+    color: #764069;
 }
 /* User Register Form */
 
