--- a/MMarket/css/BadgeStyle.css
+++ b/MMarket/css/BadgeStyle.css
@@ -1,15 +1,16 @@
 ﻿.badge1 {
     position: relative;
+    background-color: white;
 }
 
-    .badge1[data-badge]:after {
+    .badge1[data-badge]::after {
         content: attr(data-badge);
         position: absolute;
         top: -10px;
         right: -10px;
         font-size: .7em;
         background: #764069;
-        color: #F1C13C;
+        color: white;
         width: 18px;
         height: 18px;
         text-align: center;
