--- a/MMarket/css/Payment.css
+++ b/MMarket/css/Payment.css
@@ -1,12 +1,13 @@
 ﻿html, body, .wrapper {
-    background: #f7f7f7;
+    background: white;
+    border-color: #F1C13C;
 }
 
 .steps {
     margin-top: -41px;
     display: inline-block;
     float: right;
-    font-size: 16px
+    font-size: 17px 
 }
 
 .step {
@@ -43,7 +44,7 @@
     }
 
 .step_complete {
-    background: #764069
+    background:white;
 }
 
     .step_complete a.check-bc, .step_complete a.check-bc:hover, .afix-1, .afix-1:hover {
@@ -51,13 +52,13 @@
     }
 
 .step_line.step_complete {
-    background: 0;
+    background: white;
     border-left: 16px solid #F1C13C
 }
 
 .step_thankyou {
     float: left;
-    background: #764069;
+    background: white;
     padding: 7px 13px;
     border-radius: 1px;
     text-align: center;
